# PikoGPT_Leaderboard

./: .gitignore  README.md  leaderboard.csv  leaderboard.json  pyproject.toml
Results/PegasusGPT_T1/pg_dpo_uf_best_checkpoint/: PegasusGPT_T1__pg_dpo_uf_best_checkpoint__overview.json
Results/PegasusGPT_T1/pg_dpo_uf_best_checkpoint/hellaswag/: hellaswag__pg_dpo_uf_best_checkpoint__validation.json
Results/PegasusGPT_T1/pg_dpo_uf_best_checkpoint/lambada/: lambada__pg_dpo_uf_best_checkpoint__test.json
Results/PegasusGPT_T1/pg_dpo_uf_best_checkpoint/openbookqa/: openbookqa__pg_dpo_uf_best_checkpoint__validation.json
Results/PegasusGPT_T1/pg_dpo_uf_best_checkpoint/winogrande/: winogrande__pg_dpo_uf_best_checkpoint__validation.json
Results/PegasusGPT_T1_run2/run2dpo_best_checkpoint/: PegasusGPT_T1_run2__run2dpo_best_checkpoint__overview.json
Results/PegasusGPT_T1_run2/run2dpo_best_checkpoint/hellaswag/: hellaswag__run2dpo_best_checkpoint__validation.json
Results/PikoGPT_Baseline_GH/11_epoch_1650_steps_checkpoint_20260209_001131/: PikoGPT_Baseline_GH__11_epoch_1650_steps_checkpoint_20260209_001131__overview.json
Submissions/PegasusGPT/: main.py
Submissions/PegasusGPT_T1/: main.py
Submissions/PegasusGPT_T1/runs/: runDirectory.md
Submissions/PegasusGPT_T1_run2/: main.py
Submissions/PikoGPT_Baseline_GH/: main.py
leaderboard/: leaderboard.py  run_benchmarks.py
leaderboard/benchmarks/preprocessing/: PreprocessingOverview.md  inspect_hellaswag.py  preprocess_hellaswag.py  preprocess_lambada.py  preprocess_openbookqa.py  preprocess_winogrande.py
(+37 files in other folders)
