[project]
name = "pikogpt-leaderboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "tomli>=2.0.0",
    "datasets>=2.14.0",
    "tqdm>=4.66.0",
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "fasttext>=0.9.2",
    "numpy>=1.24.0",
    "transformers>=4.30.0",
    "psutil>=5.9.0",
    "torch>=2.0.0",
    "torchinfo>=1.8.0",
]

